# kinitro

./: .dockerignore  .env.example  .env.validator.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  alembic.ini  copy_submission_files.py  docker-compose.yml  env.example  flake.nix  justfile  pyproject.toml  rl_interface.py  ruff.toml  run_kinitro.py
.githooks/: pre-commit
.github/workflows/: ci.yml  copy_submission_files.yml  sync_submission_template.yml
alembic/: env.py
alembic/versions/: 20250823_0049_06def8c6c1c0_initial.py
config/: backend.toml.example  evaluator.toml.example  miner.toml.example  validator.toml.example  validator_child.toml.example  validator_parent.toml.example
config/benchmarks/: local_mt10.json  local_swarm.json  local_swarm_payload.json
data/: evaluator.duckdb
deploy/docker/: .env.local  Dockerfile.evaluator  Dockerfile.evaluator-cuda  Dockerfile.migrator  Dockerfile.miner-agent  Dockerfile.miner-agent-cuda  Dockerfile.validator  README.md  backend.dockerfile  compose.backend.yaml  compose.base.yaml  compose.local-dev.yaml  compose.yaml  entrypoint-backend.sh  entrypoint-evaluator.sh  entrypoint-validator.sh  evaluator-cuda.dockerfile  evaluator.dockerfile  migrator.dockerfile  requirements-miner-cuda.txt  requirements-miner.txt  validator.dockerfile
deploy/k8s/: 00-namespace.yaml  01-rbac.yaml  02-configs.yaml  03-postgres.yaml  10-migrator-job.yaml  20-validator-deployment.yaml  30-evaluator-deployment.yaml  31-evaluator-gpu-deployment.yaml  40-rollout-cronjob.yaml  README.md
docs/: backend-guide.md  e2e-testing-guide.md  e2e-testing.md  miner-guide.md  miner.md  nav.json  overview.mdx  pr-review-fixes.md  scoring-and-incentives.md  testing-guide.md  validator-guide.md  validator.md
docs/architecture/: evaluator.md  incentive.md  introduction.md  orchestrator.md
docs/validator/: docker.md  validator.md
environments/: README.md
environments/_template/: Dockerfile  env.py  metadata.json  requirements.txt
environments/genesis/: Dockerfile  env.py  metadata.json  requirements.txt  warmup_kernel_cache.py
environments/maniskill3/: Dockerfile  env.py  metadata.json  requirements.txt
environments/metaworld/: Dockerfile  env.py  metadata.json  requirements.txt
environments/miner/: Dockerfile  env.py  metadata.json  requirements.txt
environments/procthor/: Dockerfile  entrypoint.sh  env.py  metadata.json  requirements.txt
eval-env/: .gitignore  Dockerfile  env.py  requirements.txt
evaluator/: USAGE.md  pyproject.toml
evaluator/default_submission/: agent.py  config.json
evaluator/kinitro_eval/: config.py
evaluator/kinitro_eval/containers/: __init__.py  podspec.yaml
evaluator/kinitro_eval/db/: __init__.py
evaluator/kinitro_eval/roullout/: envs.py
evaluator/smolvla_submission/: agent.py  async_agent.py  config.json  policy_server.py  requirements.txt
evaluator/storb_eval/: __init__.py  agent.py  agent_interface.py  agent_loader.py  cli.py  config.py  database.py  envs.py  models.py  runner.py  schema.py
evaluator/storb_eval/containers/: __init__.py
evaluator/storb_eval/db/: court_clerk.py  models.py  schema.py
evaluator/storb_eval/roullout/: __init__.py
evaluator/storb_eval/rpc/: client.py  server.py
evaluator/submission_template/: agent_server.py
evaluator/submissions/: README.md
evaluator/submissions/cartpole_submission/: agent.py  config.json  requirements.txt
evaluator/submissions/default_submission/: agent.py  requirements.txt
evaluator/submissions/smolvla_submission/: agent.py  config.json  requirements.txt
evaluator/test_scripts/: random_agent.py  test_containers.py  test_court_clerk_duckdb.py  test_rollout.py  test_rpc.py  test_rpc_rollout_integration.py
evaluator/tests/: test_containers.py  test_rollout.py  test_rpc.py
kinitro/: __init__.py  cli.py  config.py  crypto.py  rl_interface.py  types.py
kinitro/api/: __init__.py  app.py  config.py  deps.py
kinitro/backend/: __init__.py  app.py  config.py  evaluator.py  models.py  routes.py  scheduler.py  storage.py
kinitro/chain/: __init__.py  commitments.py  weights.py
kinitro/cli/: __init__.py  api.py  build.py  build_eval_env.py  chutes_push.py  commit.py  crypto_commands.py  db_commands.py  db_create.py  db_drop.py  db_init.py  db_reset.py  db_status.py  executor.py  init_miner.py  list_envs.py  miner_deploy.py  mock_miner.py  scheduler.py  service_commands.py  show_commitment.py  test_env.py  test_scoring.py  testing_commands.py  utils.py  validate.py  validator_commands.py
kinitro/environments/: __init__.py  ai2thor_env.py  base.py  maniskill3_env.py  metaworld_env.py  procedural.py  registry.py
kinitro/evaluation/: __init__.py  metrics.py  parallel.py  rollout.py
kinitro/executor/: __init__.py  api_client.py  config.py  env_loader.py  family_worker.py  main.py  manager.py  miner_deployment.py  verification.py  worker.py  worker_process.py
kinitro/miner/: __init__.py
kinitro/scheduler/: __init__.py  config.py  main.py  scoring.py  task_generator.py
kinitro/scoring/: __init__.py  pareto.py  threshold.py  winners_take_all.py
kinitro/validator/: __init__.py  client.py  main.py
miner/: pyproject.toml
miner/miner/: __init__.py
robo/: cli.py
robo/backend/: __init__.py  app.py  config.py  evaluator.py  models.py  routes.py  scheduler.py  storage.py
robo/chain/: __init__.py  commitments.py  weights.py
robo/environments/: dm_control_env.py  registry.py
robo/evaluation/: __init__.py  metrics.py  parallel.py  rollout.py
robo/miner/: __init__.py
scripts/: ai2thor_explore.py  benchmark_genesis.py  demo.sh  migrate_evaluator_db.sh  procthor_explore.py  reset_backend_db.sh  reset_validator_db.sh  services.sh  start-services.sh  test-api.sh  test-e2e.sh  test-mock-miner.sh  test_comp.sh  update_validator.sh  worktree-env.sh
src/backend/: cli.py  (+20 more)
tests/: __init__.py
validator/: Cargo.toml
validator/src/: constants.rs  log.rs  main.rs
validator/src/chain/: mod.rs
validator/src/evaluator/: mod.rs
validator/src/store/: mod.rs
(+203 files in other folders)
