[workspace]
resolver = "3"
members = ["validator"]

[workspace.dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["multipart", "macros"] }
clap = { version = "4.5.43" }
config = { version = "0.15.6", features = ["toml"] }
thiserror = "2.0.11"
tokio = { version = "1.44.2", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["serde"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "ansi",
    "env-filter",
    "fmt",
    "registry",
    "std",
] }

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
opt-level = 2
