[project]
name = "robo-subnet"
version = "0.1.0"
description = "Bittensor subnet for evaluating generalist robotics policies across diverse environments"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Bittensor
    "bittensor>=8.0.0",
    # Robotics simulation (core - MetaWorld only)
    "mujoco>=3.0.0",
    "metaworld @ git+https://github.com/Farama-Foundation/Metaworld.git@master",
    "gymnasium>=1.1",
    # Async/HTTP
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    # Numerics
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    # Utils
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    # Image processing
    "Pillow>=10.0.0",
    # Backend API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
# Optional environment families
# dm-control = [
#     "dm_control>=1.0.0",
# ]
# maniskill = [
#     "mani-skill2>=0.5.0",
# ]
# All environments
# all-envs = [
#     "dm_control>=1.0.0",
#     "mani-skill2>=0.5.0",
# ]
# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
robo = "robo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["robo"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]
