[project]
name = "kinitro"
version = "0.1.0"
description = "Bittensor subnet for evaluating generalist robotics policies across diverse environments"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Bittensor
    "bittensor>=8.0.0",
    # Container execution (for running eval environments)
    "affinetes @ git+https://github.com/AffineFoundation/affinetes.git",
    # Robotics simulation (core - MetaWorld only)
    "mujoco>=3.0.0",
    "metaworld @ git+https://github.com/Farama-Foundation/Metaworld.git@master",
    "gymnasium>=1.1",
    # Async/HTTP
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    # Numerics
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    # Utils
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    # Image processing
    "Pillow>=10.0.0",
    # Backend API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Deployment (Basilica for GPU serverless)
    "basilica-sdk==0.15.0",
    # HuggingFace Hub for model uploads
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
# Optional environment families
# dm-control = [
#     "dm_control>=1.0.0",
# ]
# maniskill = [
#     "mani-skill2>=0.5.0",
# ]
# All environments
# all-envs = [
#     "dm_control>=1.0.0",
#     "mani-skill2>=0.5.0",
# ]
# Development
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.14",
]

[project.scripts]
kinitro = "kinitro.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["kinitro"]

[tool.ruff]
exclude = [".git", ".pyenv", ".ruff_cache", ".venv", ".vscode"]
indent-width = 4
line-length = 100
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["E501"]
select = ["F", "E", "W", "N", "I", "A", "PLC", "PLE", "PLW"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end integration tests",
    "metaworld: requires MuJoCo + MetaWorld runtime",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.analysis]
# genesis is a runtime-only dependency (installed in Docker container, not in CI)
allowed-unresolved-imports = ["genesis"]

[tool.ty.src]
# Exclude miner templates (they import from local rl_interface.py which is copied at deploy time)
exclude = [".git", ".pyenv", ".ruff_cache", ".venv", ".vscode", "kinitro/miner/template", "environments/genesis/warmup_kernel_cache.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
    "ty>=0.0.14",
]
