[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["storb_eval*"]

[project]
name = "storb-rl"
version = "0.0.1"
description = "Storb RL Subnet"
readme = "USAGE.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "ray>=2.48.0",
    "metaworld==3.0.0",
    "numpy>=1.26",
    "gymnasium==1.2.0",
    "mujoco>=3.2.0",
]

[project.scripts]
storb-eval = "storb_eval.cli:main"

[dependency-groups]
dev = ["debugpy>=1.8.9", "py-spy>=0.4.0", "pytest>=8.3.4", "ruff>=0.8.2"]
