[package]
name = "validator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
config.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-serde.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "validator"
path = "src/main.rs"
